# zdp

./: .env  .gitignore  LICENSE  PACKAGING.md  README.md  electron-builder.json  main.py  package.json  pyproject.toml  sample_data.csv  tsconfig.electron.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  zdp.spec  zdp_entry.py
.github/: copilot-instructions.md
.github/workflows/: release.yml
app/: analysis.py  main.py  preprocessing.py  schemas.py
app/algorithms/: base.py  bp_model.py  go_model.py  jm_model.py  llm_model.py  new_models.py
backend/: pyproject.toml
backend/app/: analysis.py  main.py  preprocessing.py  schemas.py
backend/app/algorithms/: bp_model.py  go_model.py  jm_model.py  llm_model.py
data/samples/: field_weekly_counts.csv  nhpp_goel_okumoto.csv  tbf_jm_nonmonotonic_solvable.csv  tbf_jm_synthetic.csv  tbf_s_shaped.csv
docs/manual/: main.typ
docs/test/: template.typ  test_description.typ  test_plan.typ  test_report.typ
electron/: main.ts  preload.ts
frontend/: index.html  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: AnalysisDashboard.vue  DistributionChart.vue  ResultsChart.vue
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.ts
scripts/: build-backend.py  build.bat  build.sh  generate_sample_data.py
src/components/: AnalysisDashboard.vue
src/i18n/locales/: en.ts  zh.ts
src/sras/: __init__.py  app.py  cli.py
src/sras/data/: __init__.py  dataset.py  loader.py
src/sras/gui/: __init__.py  main_window.py
src/sras/models/: __init__.py  base.py  bp_neural.py  goel_okumoto.py  hybrid.py  jelinski_moranda.py  s_shaped.py  svr.py
src/sras/reporting/: __init__.py  report_builder.py
src/sras/services/: __init__.py  analysis.py
src/sras/visualization/: __init__.py  matplotlib_canvas.py  plots.py  utils.py
src/zdp/: __init__.py  __main__.py  app.py  cli.py
src/zdp/data/: __init__.py  dataset.py  loader.py  types.py
src/zdp/gui/: __init__.py  experiment_window.py  main_window.py  main_window_old.py  parameters_window.py
src/zdp/models/: __init__.py  base.py  bp_neural.py  gm.py  goel_okumoto.py  hybrid.py  jelinski_moranda.py  plugins.py  s_shaped.py  svr.py
src/zdp/reporting/: __init__.py  report_builder.py
src/zdp/services/: __init__.py  analysis.py  experiments.py  intervals.py  validation.py
src/zdp/visualization/: __init__.py  plots.py
tests/: test_app.py  test_cli.py  test_data_loader.py  test_models.py  test_walk_forward_and_intervals.py
